--- a/monstache/config.toml
+++ b/monstache/config.toml
@@ -1,8 +1,8 @@
-mongo-url = "mongodb+srv://kkrypt:uniquecarbon@epoch.gsbkqce.mongodb.net/?retryWrites=true&w=majority"
+# mongo-url = <add mongo url here>
 
-elasticsearch-urls = ["http://elasticsearch:9200"]
+# elasticsearch-urls = ["http://elasticsearch:9200"]
 
-direct-read-namespaces = ["campus-delivery-service.shops"]
+# direct-read-namespaces = ["<database_name>.<collection_name>"]
 
 # # if you want to use MongoDB change streams instead of legacy oplog tailing use change-stream-namespaces
 # # change streams require at least MongoDB API 3.6+
